@@ -152,8 +152,6 @@
                         <option>--add-opens</option>
                         <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
                         <option>--add-exports</option>
-                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
-                        <option>--add-exports</option>
                         <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
                         <option>--add-exports</option>
                         <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
